[package]
name = "tower-sessions-auto-memory-store"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Provides a self managed automatic in memory session store"
repository = "https://github.com/wushilin/tower-sessions-auto-memory-store.git"

[dependencies]
async-trait = "0.1.86"
serde = "1.0.218"
tokio = {version="1.43.0", features=["full"]}
tower-sessions = "0.14.0"
axum-server = "0.7.1"
axum = "0.8.1"
